[package]
name = "tmp"
version = "0.1.0"
authors = ["Garrett Hunyadi <garrett.hunyadi@endurance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
# tokio = { version = "0.2", features = ["full"] }
# wappalyzer = "0.1.0"
# url = "2.1.1"
# domain_info = "0.1.1"
# futures = { version = "0.3", features = ["compat"] }
# async-std = "1.4.0"            